examples/test/testpolicy10702.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10702
  namespace: namespace190
spec:
  podSelector:
    matchLabels:
      key20: value24
      key27: value23
      key19: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value43
          key20: value36
          key32: value41
